# HALSPA-client

./: CLAUDE.md  README.md  bin.ipynb  calibration_template.py  run
halspa/: main.py  measure_raw_voltages.py  pyproject.toml  run
halspa/src/halspa/: __init__.py  adc.py  analog_mux.py  board.py  digexp.py  pin.py  power.py  repl.py  tca9535.py
halspa/tests/: test_adc.py  test_analog_mux.py  test_board.py  test_power.py  test_tca9535.py
halspa/tests/hardware/: conftest.py  test_adc_hw.py  test_analog_mux_hw.py  test_i2c_scan.py  test_power_hw.py  test_tca9535_hw.py
halspa/tests/self/: self_test.py
halspa_client/: pyproject.toml
halspa_client/src/halspa_client/: adc.py  analog_mux.py  client.py  digexp.py  pin.py  power.py  repl.py
kettle/: pyproject.toml
picon/: .devcontainer.json  main.py  run
picon/picon/: adc.py  analog_mux.py  picon.py  power_control.py  pwm.py
picon/picon/calibration/: __init__.py  default.py
sauce/: main.py  run
sauce/sauce/: adc.py  analog_mux.py  power_control.py  sauce.py  tca9535.py
