[project]
name = "halspa"
version = "0.1.0"
description = "HALSPA board driver library for direct I2C communication"
authors = [
    { name = "Matti Airas", email = "matti.airas@hatlabs.fi" }
]
requires-python = ">=3.11"
dependencies = [
    "smbus2>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
addopts = "--tb=short -v"
