[project]
name = "halspa_client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matti Airas", email = "matti.airas@hatlabs.fi" }
]
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "pyserial>=3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
]
